@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add ::Row::OnColumnMissing (Thanks ZipRecruiter!)
 
 2.029000  2015-06-27 14:16:31-07:00 America/Los_Angeles
  - Add ::ResultSet::OneRow (Thanks Aran Deltac!)
